Fix rest show page overflow

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -536,7 +536,7 @@ footer {
     font-family: $main_font;
     color: white;
     font-size: 30px;
-    margin: 0 auto 30px auto;
+    margin: 0 auto 50px auto;
     width: max-content;
 }
 
