--- a/app/assets/stylesheets/rest.scss
+++ b/app/assets/stylesheets/rest.scss
@@ -15,10 +15,9 @@
 .rest_body {
     width: 100%;
     position: relative;
-    height: 2000px;
+    height: max-content;
     background-color: transparent;
-    // margin-left: 302px;
-    // bottom: -200px;
+
 }
 
 .rest-navbar {
