--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -27,6 +27,13 @@
     }
 }
 
+.review-container {
+    width: 612px;
+    padding-top: 1200px;
+    margin-left: 300px;
+    height: max-content;
+}
+
 .review-content {
     height: 170px;
     width: 482px;
